# luckfox-lvgl-demo

./: .gitignore  CMakeLists.txt  Makefile  fix_compile_commands.py  main.c  main.cpp  toolchain-arm-linux-gnueabihf.cmake  toolchain-arm-rockchip.cmake
app/: CMakeLists.txt
app/app_itc/: ItcDataBroker.hpp  KeyMessageQueue.cpp  KeyMessageQueue.hpp  app_itc.cpp
app/app_keypad/: app_keypad_init.c  app_keypad_init.h  app_keypad_interface.cpp  app_keypad_interface.h  app_keypad_interface.hpp
app/app_lvgl/: app_lvgl_init.c  app_lvgl_init.cpp  app_lvgl_init.h  app_lvgl_interface.cpp  app_lvgl_interface.h  app_lvgl_ui.c  app_lvgl_ui.cpp  app_lvgl_ui.h  app_lvgl_ui.hpp
bsp/: CMakeLists.txt
bsp/c_keypad/: DEV_Config.c  DEV_Config.h  sysfs_gpio.c  sysfs_gpio.h
bsp/drivers/Keypad/: Key.cpp  Key.hpp  KeypadManager.cpp  KeypadManager.hpp
bsp/hal/SysfsGpio/: SysfsGpio.cpp  SysfsGpio.hpp
bsp/keypad/: KeypadBsp.cpp  KeypadBsp.h  SysfsGpio.cpp  SysfsGpio.h
images/: CMakeLists.txt  Luckfox.c  cat.c  galaxy.c  saint.c
lib/: CMakeLists.txt
lib/lv_port_linux/: lv_drv_conf.h
